--- a/kelas-5/istanap-pancasila/istana-pancasila.html
+++ b/kelas-5/istanap-pancasila/istana-pancasila.html
@@ -133,7 +133,7 @@
     </div>
     <div class="nav-right">
       <a href="index.html">🏠 Beranda</a>
-      <a href="kelas-5/Petualangan-Kelas-5.html">⬅️ kembali</a>
+      <a href="Petualangan-Kelas-5.html">⬅️ kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -159,6 +159,7 @@
 </body>
 
 </html>
+
 
 
 
