--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
@@ -191,7 +191,7 @@
     </div>
     <div class="nav-right">
       <a href="/UPT-SD-NEGERI-160-GRESIK/index.html">🏠 Beranda</a>
-      <a href="kelas-5/sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
+      <a href="istana-pancasila.html">⬅️ kembali</a>
       <a href="#">🖼️ Galeri</a>
     </div>
   </nav>
