--- a/kelas-5/istanap-pancasila/istana-pancasila.html
+++ b/kelas-5/istanap-pancasila/istana-pancasila.html
@@ -132,7 +132,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="index.html">🏠 Beranda</a>
+      <a href="../../index.html">🏠 Beranda</a>
       <a href="sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
@@ -159,6 +159,7 @@
 </body>
 
 </html>
+
 
 
 
