--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -141,7 +141,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../index.html">🏠 Beranda</a>
+      <a href="../index.html">🏠 Beranda</a>
       <a href="#">📌 Program</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
@@ -205,5 +205,6 @@
 
 </body>
 </html>
+
 
 
