--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/latihan1-istana.html
@@ -162,7 +162,7 @@
     </div>
     <div class="nav-right">
       <a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/">🏠 Beranda</a>
-      <a href="../../sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
+      <a href="../sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
       <a href="#">🖼️ Galeri</a>
     </div>
   </nav>
