--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
@@ -149,7 +149,7 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-                <a href="../sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
+                <a href="../../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
         <a href="Soal_PKn_Kelas_5.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -158,8 +158,8 @@ button:hover {
     <div id="quiz"></div>
 </div>
 
-<audio id="suaraKlik" src="mouse-clicks-6849 (mp3cut.net).mp3"></audio>
-<audio id="suaraPeringatan" src="tada-234709.mp3"></audio>
+<audio id="suaraKlik" src="suara/button-press.mp3"></audio>
+<audio id="suaraPeringatan" src="suara/tada-234709.mp3"></audio>
 
 <script>
 let soal = [
