--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal-latihan1-istana.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal-latihan1-istana.html
@@ -150,7 +150,7 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../sejarah-kelahiran-pancasila-5.html">⬅️ kembali</a>
+        <a href="../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
         <a href="Soal_PKn_Kelas_5.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -160,8 +160,10 @@ button:hover {
 </div>
 
 <!-- Suara -->
-<audio id="suaraKlik" src="suara/mouse-clicks.mp3" preload="auto"></audio>
-<audio id="suaraPeringatan" src="suara/tada-234709.mp3" preload="auto"></audio>
+<audio id="suaraKlik" src="../../../suara/mouse-clicks.mp3" preload="auto"></audio>
+<audio id="suaraPeringatan" src="../../../suara/tada-234709.mp3" preload="auto"></audio>
+
+
 
 <script>
 let soal = [
