--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html
@@ -158,8 +158,8 @@ button:hover {
     <div id="quiz"></div>
 </div>
 
-<audio id="suaraKlik" src="suara/button-press.mp3"></audio>
-<audio id="suaraPeringatan" src="suara/tada-234709.mp3"></audio>
+<audio id="suaraKlik" src="../../../../suara/mouse-clicks.mp3"></audio>
+<audio id="suaraPeringatan" src="../../../../suara/tada-234709.mp3"></audio>
 
 <script>
 let soal = [
