--- a/kelas-5/kelas.html
+++ b/kelas-5/kelas.html
@@ -157,7 +157,7 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-menu">
-      <a href="index.html">🏠 Beranda</a>
+      <a href="../index.html">🏠 Beranda</a>
       <a href="#">📞 Kontak</a>
     </div>
   </nav>
@@ -223,3 +223,4 @@
 
 </body>
 </html>
+
