--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
@@ -211,7 +211,7 @@
       <div class="dropdown-content-map">
         <a href="sejarah-kelahiran-pancasila/soal-latihan1-istana.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
-        <a href="#latihan3" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
         <a href="#latihan4" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
         <a href="#latihan5" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
         <a href="#latihan6" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
