--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
@@ -213,7 +213,7 @@
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
-        <a href="#latihan5" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
         <a href="#latihan6" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
         <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Latihan 7</a>
         <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Latihan 8</a>
