--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -159,7 +159,7 @@
       <span class="emoji">⭐</span>
       Istana Pancasila
     </a>
-    <a href="induk-pulau.html" class="map-item">
+    <a href="../induk-pulau.html" class="map-item">
       <span class="emoji">📚</span>
       Pulau Bahasa Indonesia
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
