--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -159,8 +159,8 @@
       <span class="emoji">⭐</span>
       Istana Pancasila
     </a>
-    <a href="../induk-pulau.html" class="map-item">
-      <span class="emoji">📚</span>
+    <a href="Pulau Bahasa Indonesia/induk-pulau.html" class="map-item">
+          <span class="emoji">📚</span>
       Pulau Bahasa Indonesia
     </a>
     <a href="Lembah-Matematika-Kelas5.html" class="map-item">
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
