--- a/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
+++ b/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
@@ -15,13 +15,15 @@
       text-align: center;
     }
 
-    /* --- Navigasi tanpa background --- */
+    /* --- Navigasi transparan tanpa border --- */
     nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      background: transparent; 
+      border: none;
+      box-shadow: none;
     }
 
     .nav-left {
