--- a/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
+++ b/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
@@ -145,9 +145,9 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../index.html">🏠 Beranda</a>
-      <a href="#">📌 Program</a>
-      <a href="#">🖼️ Galeri</a>
+      <a href="../../index.html">🏠 Beranda</a>
+      <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
+           <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
   </nav>
