--- a/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
+++ b/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -9,10 +9,11 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('https://i.imgur.com/ybBJNKU.png') no-repeat center center fixed;
-      background-size: cover;   /* tetap full layar */
+      background: url('https://i.imgur.com/ybBJNKU.png') no-repeat center center;
+      background-size: cover;   /* full layar */
       color: #333;
       text-align: center;
+      min-height: 100vh;
     }
 
     /* --- Navigasi --- */
@@ -21,7 +22,9 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      background: transparent; 
+      flex-wrap: wrap;
+      /* background dan border dihapus */
+      background: none;
       border: none;
       box-shadow: none;
     }
@@ -29,47 +32,51 @@
     .nav-left {
       display: flex;
       align-items: center;
-      gap: 1rem;
+      gap: 0.5rem;
+      flex-wrap: wrap;
     }
 
     .nav-right {
       display: flex;
       gap: 0.5rem;
       flex-wrap: wrap;
+      margin-top: 0.5rem;
     }
 
     nav img {
-      height: 55px;
+      height: 50px;
+      max-width: 100%;
     }
 
     nav a {
       background: rgba(255, 255, 255, 0.9);
-      padding: 0.5rem 1rem;
+      padding: 0.4rem 0.8rem;
       border-radius: 6px;
       text-decoration: none;
       color: #0288d1;
       font-weight: bold;
       display: flex;
       align-items: center;
-      gap: 0.4rem;
+      gap: 0.3rem;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      font-size: 0.9rem;
     }
 
     nav a:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
     }
 
     .title-section {
       text-align: center;
-      margin: 30px 20px 10px;
+      margin: 20px 15px 10px;
     }
 
     .title-section h1 {
       font-size: 2rem;
       background: rgba(255,255,255,0.85);
       display: inline-block;
-      padding: 0.5rem 1.5rem;
+      padding: 0.5rem 1.2rem;
       border-radius: 12px;
       color: #0288d1;
       text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
@@ -77,67 +84,76 @@
 
     /* Intro hanya selebar teks */
     .intro {
-      margin: 20px auto;
+      margin: 15px auto;
       text-align: center;
     }
 
     .intro p {
-      display: inline-block;              /* background menempel sesuai panjang teks */
+      display: inline-block;
       background: rgba(255, 255, 255, 0.85); 
-      padding: 12px 20px;
+      padding: 10px 15px;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.25);
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: 500;
     }
 
     .menu {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 15px;
       max-width: 900px;
-      margin: 40px auto;
+      margin: 25px auto;
       padding: 10px;
     }
 
     .card {
       background: rgba(255,255,255,0.9);
-      padding: 20px;
-      border-radius: 15px;
+      padding: 15px;
+      border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       transition: transform 0.3s;
       cursor: pointer;
     }
 
     .card:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
       background: #e6f7ff;
     }
 
     .card h2 {
       margin-top: 10px;
       color: #2b7a78;
+      font-size: 1rem;
     }
 
     footer {
       background: rgba(255, 255, 255, 0.8);
-      padding: 15px;
-      margin-top: 30px;
+      padding: 12px;
+      margin-top: 20px;
       border-top: 4px solid #2b7a78;
+      font-size: 0.9rem;
     }
 
-    @media (max-width: 768px) {
+    /* 📱 Responsif untuk HP */
+    @media (max-width: 600px) {
       nav {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
       }
       .nav-right {
-        justify-content: flex-start;
-        margin-top: 1rem;
+        justify-content: center;
       }
       .title-section h1 {
-        font-size: 1.5rem;
-        padding: 0.5rem 1rem;
+        font-size: 1.4rem;
+        padding: 0.4rem 1rem;
+      }
+      .intro p {
+        font-size: 0.9rem;
+        padding: 8px 12px;
+      }
+      .card h2 {
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -148,12 +164,12 @@
   <nav>
     <div class="nav-left">
       <img src="https://i.imgur.com/sxm7RR1.png" alt="Logo Gresik">
-      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 62px;">
+      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 55px;">
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
+      <a href="../Petualangan-Kelas-5.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
