--- a/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
+++ b/kelas-5/Pulau Bahasa Indonesia/induk-pulau.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -6,11 +6,16 @@
   <title>Pulau Bahasa Indonesia</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      height: 100%;
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('https://i.imgur.com/ybBJNKU.png') no-repeat center center;
-      background-size: cover;   /* full layar */
+      /* Fallback + background image */
+      background: #e0f7fa url('https://i.imgur.com/ybBJNKU.png') no-repeat center center;
+      background-size: cover;
+    }
+
+    body {
       color: #333;
       text-align: center;
       min-height: 100vh;
@@ -23,7 +28,6 @@
       align-items: center;
       padding: 1rem 2rem;
       flex-wrap: wrap;
-      /* background dan border dihapus */
       background: none;
       border: none;
       box-shadow: none;
