--- a/kelas-5/Pulau-Bahasa-Indonesia/pulau.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/pulau.html
@@ -137,7 +137,7 @@
 
   <!-- Menu Interaktif -->
   <div class="map-grid">
-    <a href="#petualangan-kata" class="map-item"><span class="emoji">🕵️‍♂️</span>Petualangan Seru di Negeri Kata & Cerita</a>
+    <a href="🕵Petualangan-Seru.html" class="map-item"><span class="emoji">🕵️‍♂️</span>Petualangan Seru di Negeri Kata & Cerita</a>
     <a href="#pintu-cerita" class="map-item"><span class="emoji">🚪</span>Pintu Rahasia ke Alam Cerita</a>
     <a href="#minat-bakat" class="map-item"><span class="emoji">🌟</span>Mengasah Minat & Bakat</a>
     <a href="#wirausaha" class="map-item"><span class="emoji">🎯</span>Langkah Kecil Menuju Wirausaha Hebat</a>
