--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -209,7 +209,7 @@
         <span class="emoji">📝</span> Yuk, Kerjakan Latihan! ▼
       </button>
       <div class="dropdown-content-map">
-        <a href="sejarah-kelahiran-pancasila/soal-latihan1-istana.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
+        <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
@@ -241,3 +241,4 @@
 
 </body>
 </html>
+
