--- a/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan.html
@@ -136,7 +136,7 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
+        <a href="pulau.html">◀️ kembali</a>
         <a href="Soal_Petualangan.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -296,3 +296,4 @@ tampilkanSoal();
 </script>
 </body>
 </html>
+
