--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -210,7 +210,7 @@
       </button>
       <div class="dropdown-content-map">
         <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
+        <a href="soal-petualangan2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
         <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
@@ -241,4 +241,5 @@
 
 </body>
 </html>
+
 
