--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -211,10 +211,10 @@
       <div class="dropdown-content-map">
         <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
         <a href="soal-petualangan2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
-        <a href="#latihan6" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
+        <a href="soal-petualangan3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
+        <a href="soal-petualangan4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
+        <a href="soal-petualangan5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
+        <a href="soal-petualangan6.html" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
         <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Latihan 7</a>
         <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Latihan 8</a>
         <a href="#latihan9" style="--hover-bg:#e6ccff;">⭐ Latihan 9</a>
@@ -241,5 +241,6 @@
 
 </body>
 </html>
+
 
 
