--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -11,7 +11,7 @@
       font-family: 'Poppins', sans-serif;
       height: 100%; width: 100%;
       overflow-x: hidden;
-      background: url('https://i.imgur.com/Bc2M7hb.png') no-repeat center center fixed;
+      background: url('https://i.imgur.com/uXBnMk8.png') no-repeat center center fixed;
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -241,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
