--- a/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan2.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan2.html
@@ -136,8 +136,8 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="pulau.html">◀️ kembali</a>
-        <a href="Soal_Petualangan.pdf" download>📥 Download</a>
+        <a href="🕵Petualangan-Seru.html">◀️ kembali</a>
+        <a href="Soal_Petualangan2.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
         🕵️ Detektif Cilik Ayo Uji Kepintaranmu
@@ -296,5 +296,6 @@ tampilkanSoal();
 </script>
 </body>
 </html>
+
 
 
