--- a/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan4.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/soal-petualangan4.html
@@ -145,8 +145,8 @@ button:hover {
     <div id="quiz"></div>
 </div>
 
-<audio id="suaraKlik" src="../../../../suara/mouse-clicks.mp3"></audio>
-<audio id="suaraPeringatan" src="../../../../suara/tada-234709.mp3"></audio>
+<audio id="suaraKlik" src="../../suara/mouse-clicks.mp3"></audio>
+<audio id="suaraPeringatan" src="../../suara/tada-234709.mp3"></audio>
 
 <script>
 let soal = [
@@ -377,4 +377,5 @@ tampilkanSoal();
 </script>
 </body>
 </html>
+
 
