--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -163,8 +163,8 @@
           <span class="emoji">📚</span>
       Pulau Bahasa Indonesia
     </a>
-    <a href="Lembah-Matematika-Kelas5.html" class="map-item">
-      <span class="emoji">🧮</span>
+    <a href="lembah/lembah.html" class="map-item">
+      <span class="emoji">⛰️</span>
       Lembah Matematika
     </a>
     <a href="ipas5.html" class="map-item">
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
