--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -138,7 +138,7 @@
 
   <!-- Menu Interaktif -->
   <div class="map-grid">
-    <a href="🧮Petualangan-Bilangan.html" class="map-item"><span class="emoji">🎡</span>Wisata Angka Dari Nol sampai Seratus Ribu</a>
+    <a href="wisata.html" class="map-item"><span class="emoji">🎡</span>Wisata Angka Dari Nol sampai Seratus Ribu</a>
     <a href="#pintu-geometri" class="map-item"><span class="emoji">🎲</span>Bangun Datar Ajaib</a>
     <a href="#minat-aljabar" class="map-item"><span class="emoji">🎯</span>Petualangan Seru Bersama KPK dan FPB</a>
     <a href="#logika-cerdas" class="map-item"><span class="emoji">🏰</span>Kerajaan Pecahan</a>
