--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -167,23 +167,23 @@
       <span class="emoji">⛰️</span>
       Lembah Matematika
     </a>
-    <a href="ipas5.html" class="map-item">
+    <a href="hutan.html" class="map-item">
       <span class="emoji">🌿</span>
       Hutan IPAS
     </a>
-    <a href="sbdp5.html" class="map-item">
+    <a href="#sbdp5.html" class="map-item">
       <span class="emoji">🎨</span>
       Gunung Seni Budaya
     </a>
-    <a href="bjawa5.html" class="map-item">
+    <a href="#bjawa5.html" class="map-item">
       <span class="emoji">🏡</span>
       Desa Bahasa Jawa
     </a>
-    <a href="plh5.html" class="map-item">
+    <a href="#plh5.html" class="map-item">
       <span class="emoji">🌱</span>
       Danau PLH
     </a>
-    <a href="latihan5.html" class="map-item">
+    <a href="#latihan5.html" class="map-item">
       <span class="emoji">🧠</span>
       Tantangan Logika
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
