--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -167,7 +167,7 @@
       <span class="emoji">⛰️</span>
       Lembah Matematika
     </a>
-    <a href="hutan.html" class="map-item">
+    <a href="hutan/hutan.html" class="map-item">
       <span class="emoji">🌿</span>
       Hutan IPAS
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
