--- a/kelas-5/hutan/hutan.html
+++ b/kelas-5/hutan/hutan.html
@@ -138,7 +138,7 @@
 
   <!-- Menu Interaktif -->
   <div class="map-grid">
-    <a href="Cahaya&Bunyi.html" class="map-item"><span class="emoji">🌈</span>Petualangan Seru Bersama Cahaya & Bunyi</a>
+    <a href="Cahaya-Bunyi.html" class="map-item"><span class="emoji">🌈</span>Petualangan Seru Bersama Cahaya & Bunyi</a>
     <a href="#ekspedisi.html" class="map-item"><span class="emoji">🐾</span>Ekspedisi Alam</a>
     <a href="#kekuatan.html" class="map-item"><span class="emoji">⚡</span>Kekuatan Super di Sekitar Kita</a>
     <a href="#planet.html" class="map-item"><span class="emoji">🌎</span>Planet Biru yang Penuh Teka-Teki</a>
