--- a/kelas-5/hutan/rahasia.html
+++ b/kelas-5/hutan/rahasia.html
@@ -221,7 +221,7 @@
         <a href="soal-cahaya3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
         <a href="soal-cahaya4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
         <a href="soal-cahaya5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
-        <a href="#soal-cahaya6.html" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
+        <a href="soal-cahaya6.html" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
         <a href="#soal-cahaya7.html" style="--hover-bg:#b3fff0;">🎉 Latihan 7</a>
         <a href="#soal-cahaya8.html" style="--hover-bg:#ffd9b3;">🧩 Latihan 8</a>
         <a href="#soal-cahaya9.html" style="--hover-bg:#e6ccff;">⭐ Latihan 9</a>
@@ -248,3 +248,4 @@
 
 </body>
 </html>
+
