--- a/kelas-5/hutan/cahaya-bunyi.html
+++ b/kelas-5/hutan/cahaya-bunyi.html
@@ -197,7 +197,7 @@
       <button id="dropdownBtn">🎶 Lanjutkan 🔽</button>
       <div class="dropdown-content" id="dropdownMenu">
         <a href="cahaya.html">🔦 Bermain dengan Cahaya</a>
-        <a href="bunyi.html">🔔 Bermain dengan Bunyi</a>
+        <a href="#bunyi.html">🔔 Bermain dengan Bunyi</a>
       </div>
     </div>
   </div>
@@ -231,3 +231,4 @@
 
 </body>
 </html>
+
